# Rpcs3-IOS

./: MOLTENVK_REVISION  README.md  README.runtime-api-proof-sync  REAL_RPCS3_IOS_BUILD_PLAN.md  ROADMAP_STATUS.md  RPCS3_PARITY_AUDIT.md  project.yml
.github/: merge-proof-intent  runtime-api-proof-trigger
.github/workflows/: .keep-runtime-api-sync  build-ios.yml  build-unified-ios-dedup.yml  build-unified-ios-final.yml  build-unified-ios.yml  build-unified-runtime-api-proof.yml  full-upstream-qt-ios.yml  metal-geometry-staging.yml  metal-live-program-graph.yml  metal-resource-binder-ios.yml  metal-resource-binding-integration.yml  metal-resource-binding.yml  metal-resource-reflection.yml  metal-rsx-translation.yml  metal-vertex-resources.yml  pkgi-pkg-smoke.yml  portability-audit.yml  upstream-graph-probe.yml  upstream-ios-compile-probe.yml  validate-metal-live-shader-patch.yml
App/: Info.plist  RPCS3-iOS.entitlements  RPCS3ConfigStore.h  RPCS3ConfigStore.mm  RPCS3DesktopMenu.h  RPCS3GameDetails.h  RPCS3GameDetails.mm  RPCS3GameLibrary.h  RPCS3GameLibrary.mm  RPCS3LaunchSession.h  RPCS3LaunchSession.mm  RPCS3MenuController.h  RPCS3Settings.h  RPCS3Settings.mm  RPCS3Sidebar.h  RPCS3Sidebar.mm  RPCS3UpstreamActionRouter.h  RPCS3UpstreamActionRouter.mm  RPCS3UpstreamMenuModel.h  RPCS3UpstreamMenuModel.mm  RPCS3UpstreamUIController.h  RPCS3UpstreamUIController.mm  RPCS3Utilities.h  RPCS3Utilities.mm  ci-trigger-2026-07-22.txt  main.mm
CoreBridge/: .runtime-api-proof-trigger  RPCS3CoreBridge.h  RPCS3CoreBridgeStub.mm  RPCS3CoreBridgeUpstream.cpp  RPCS3CoreOperationsStub.cpp  RPCS3CorePadBridge.cpp  RPCS3IOSGSFrame.h  RPCS3IOSGSFrame.mm  RPCS3IOSPadBridge.cpp  RPCS3IOSRuntimeGlobals.cpp  RPCS3IOSRuntimeSupport.cpp  RPCS3UpstreamFirmwareInstaller.cpp  RPCS3UpstreamRuntimeBridge.cpp  RPCS3UpstreamRuntimeBridge.h  RPCS3UpstreamRuntimeHost.cpp  RPCS3UpstreamRuntimeHost.h  RPCS3UpstreamRuntimeLinkProbe.cpp  runtime-api-proof-trigger.txt
ExecutionCore/: CMakeLists.txt
Port/: CMakeLists.txt  IOSFilesystem.h  IOSFilesystem.mm  IOSPlatform.h  IOSPlatform.mm  RPCS3CryptoCompat.cpp  RPCS3ELFProbe.cpp  RPCS3ELFProbe.h  RPCS3IOSBuildManifest.h.in  RPCS3Runtime.h  RPCS3Runtime.mm  RPCS3SELFExtractor.cpp  RPCS3SELFExtractor.h  RPCS3SELFLoadPlan.cpp  RPCS3SELFLoadPlan.h  RPCS3SELFProbe.cpp  RPCS3SELFProbe.h  RPCS3SFO.cpp  RPCS3SFO.h  portable-sources.txt  upstream-ui-port-map.md
Port/IOS/: Compat.hpp  Platform.hpp  compile-manifest.txt
Port/iOS/: RPCS3IOSGSFrame.h  RPCS3IOSGSFrame.mm
QtApp/: CMakeLists.txt  QUiLoader  QtCompat.h  RPCS3IOSGameLaunchGuard.cpp  RPCS3IOSTouchControls.cpp  RPCS3QtMainWindow.cpp  RPCS3QtMainWindow.h  RPCS3RenderWidget.cpp  RPCS3RenderWidget.h  RPCS3RendererIntegration.cpp  RPCS3RendererIntegration.h  RPCS3RuntimeActionOverrides.cpp  RPCS3RuntimeActionOverrides.h  UNIFIED_IPA_PROOF.md  main.cpp
Renderers/: RPCS3RendererBackend.h  RPCS3RendererFactory.cpp
Renderers/Apple/: RPCS3AppleSurface.h  RPCS3AppleSurface.mm  RPCS3IOSGSFrame.h  RPCS3IOSGSFrame.mm
Renderers/Metal/: GEOMETRY_STAGING_PROOF.md  RESOURCE_BINDER_PROOF.md  RPCS3MetalDrawSubmission.cpp  RPCS3MetalDrawSubmission.h  RPCS3MetalGSRender.h  RPCS3MetalGSRender.mm  RPCS3MetalGeometryPacket.cpp  RPCS3MetalGeometryPacket.h  RPCS3MetalGeometryStaging.h  RPCS3MetalPipelineState.h  RPCS3MetalPipelineState.mm  RPCS3MetalPrimitiveExpander.cpp  RPCS3MetalPrimitiveExpander.h  RPCS3MetalProgramCompiler.cpp  RPCS3MetalProgramCompiler.h  RPCS3MetalRSXFormats.h  RPCS3MetalRSXFormats.mm  RPCS3MetalRSXShaderFrontend.cpp  RPCS3MetalRSXShaderFrontend.h  RPCS3MetalRenderPipelineCache.h  RPCS3MetalRenderPipelineCache.mm  RPCS3MetalRenderer.h  RPCS3MetalRenderer.mm  RPCS3MetalRenderer.proof  RPCS3MetalResourceBinder.h  RPCS3MetalResourceBinder.mm  RPCS3MetalResourceBindings.cpp  RPCS3MetalResourceBindings.h  RPCS3MetalShaderLibrary.h  RPCS3MetalShaderLibrary.mm  RPCS3MetalShaderTranslator.cpp  RPCS3MetalShaderTranslator.h  RPCS3MetalVertexEnvironment.cpp  RPCS3MetalVertexEnvironment.h  RPCS3MetalVertexResources.h  RPCS3MetalVertexResources.mm
Renderers/Vulkan/: RPCS3VulkanContext.h  RPCS3VulkanContext.mm  RPCS3VulkanRenderer.h  RPCS3VulkanRenderer.mm
cmake/: MoltenVKIOS.cmake
cmake/toolchains/: ios-arm64.cmake
scripts/: apply-upstream-ios-overlay.py  audit-upstream.sh  build-ffmpeg-ios.sh  build-moltenvk-ios.sh  build-qt-ios-app.sh  build-spirv-cross-ios.sh  build-unified-qt-ios-app.sh  build-unified-qt-ios-dedup.sh  build-unified-qt-ios-final.sh  build-unified-qt-ios.sh  build-upstream-full-qt-ios.sh  build-upstream-ios-core.sh  build-upstream-ios-runtime-framework.sh  collect-emusystem-phase1-evidence.py  compile-upstream-probe.sh  configure-upstream-ios.sh  export-upstream-qt-ui-model.py  generate-qt-ios-sources.sh  generate-qt-ui-factory.py  patch-ios-libusb-backend.py  patch-unified-qt-host.py  patch-upstream-ios-audio-frameworks.py  patch-upstream-ios-bridge-dedup.py  patch-upstream-ios-cubeb.py  patch-upstream-ios-emu-graph.py  patch-upstream-ios-full-qt-blockers.py  patch-upstream-ios-libusb-api.py  patch-upstream-ios-metal-shader-frontend.py  patch-upstream-ios-objcxx.py  patch-upstream-ios-openal.py  patch-upstream-ios-runtime-blockers.py  patch-upstream-ios-runtime-linkage.py  patch-upstream-ios-v0040-compat.py  patch-upstream-ios-vulkan.py  prepare-qt-ios-ui.sh  probe-upstream-ios-graph.sh  run-with-timeout.py  smoke-test-pkgi-pkg.py  update-upstream-submodules.sh  validate-ios-pkg-boot-contract.py  (+1 more)
